Bug 377125 nsIMsgQuote::QuoteMessage crashes if its stream listener is not a quoting output stream listener r=bienvenu sr=mscott