mailnews/compose/src/nsMsgCompose.h
@@ -49,7 +49,7 @@
 #include "nsIMsgSendListener.h"
 #include "nsIMsgCopyServiceListener.h"
 #include "nsIMsgSend.h"
-#include "nsIStreamListener.h"
+#include "nsIMsgQuotingOutputStreamListener.h"
 #include "nsIMimeHeaders.h"
 #include "nsIBaseWindow.h"
 #include "nsIAbDirectory.h"
@@ -177,7 +177,7 @@ private:
 // THIS IS THE CLASS THAT IS THE STREAM Listener OF THE HTML OUPUT
 // FROM LIBMIME. THIS IS FOR QUOTING
 ////////////////////////////////////////////////////////////////////////////////////
-class QuotingOutputStreamListener : public nsIStreamListener
+class QuotingOutputStreamListener : public nsIMsgQuotingOutputStreamListener
 {
 public:
     QuotingOutputStreamListener(const char *originalMsgURI,
@@ -193,10 +193,10 @@ public:
     NS_DECL_ISUPPORTS
     NS_DECL_NSIREQUESTOBSERVER
     NS_DECL_NSISTREAMLISTENER
+    NS_DECL_NSIMSGQUOTINGOUTPUTSTREAMLISTENER
 
     NS_IMETHOD  SetComposeObj(nsIMsgCompose *obj);
 	  NS_IMETHOD  ConvertToPlainText(PRBool formatflowed = PR_FALSE);
-	  NS_IMETHOD	SetMimeHeaders(nsIMimeHeaders * headers);
     NS_IMETHOD InsertToCompose(nsIEditor *aEditor, PRBool aHTMLEditor);
 
 private:
